| Summary: | ASTERISK-22631: Reload does not rebuild parkpos extensions | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2013-10-01 17:02:38 | Date Closed: | 2013-10-17 13:26:05 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_parking |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | After changing the the 'parkpos' option in res_parking.conf and issuing a reload of res_parking the new parkpos extensions are not added to the dialplan. Calls can still be parked, but cannot be picked up. | ||
| Comments: | By: Jonathan Rose (jrose) 2013-10-17 12:58:26.612-0500 So from the quick test I just did, it actually is rebuilding the extensions. It's just going back through afterwards and removing them again for no reason. Same net effect. | ||