res_parking: Fix bug where reloading immediately wipes new parkpos extensions

(closes issue ASTERISK-22631)
Reported by: Kevin Harwell


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@401158 65c4cc65-6c06-0410-ace0-fbb531ad65f3